[tool.poetry]
name = "async-hll-rcon"
version = "0.1.0"
description = ""
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{include = "async_hll_rcon"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
brotli = "^1.0.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
